<resources>
    <string name="app_name">야구반 기록관리</string>
    <string name="total_record">전체 선수 기록 보기</string>
    <string name="add_game">경기 추가</string>
    <string name="each_record">경기 별 기록 보기</string>
    <string name="manage_player">선수 관리</string>

    <!-- Add Information Input Activity -->
    <string name="input_opponent">상대 학교</string>
    <string name="input_date">경기 일시</string>
    <string name="select_date">날짜 선택</string>
    <string name="hint_opponent">**대학교</string>
    <string name="start_game">경기 시작</string>
    <string name="is_hometeam">홈팀인가요?</string>

    <!-- Play Game Activity -->
    <string name="hit_1">안타</string>
    <string name="hit_2">2루타</string>
    <string name="hit_3">3루타</string>
    <string name="homerun">홈런</string>
    <string name="ball_4">볼넷</string>
    <string name="strikeout">삼진</string>
    <string name="rbi">타점</string>
    <string name="out">아웃</string>
    <string name="hitted">피안타</string>
    <string name="error">수비 실책</string>
    <string name="lose_point">실점</string>
    <string name="num_pitches">투구 수</string>
    <string name="batter">타자</string>
    <string name="pitcher">투수</string>

    <!-- Person Info Activity -->
    <string name="personinfo_name">이름</string>
    <string name="personinfo_backnumber">등번호</string>

    <!-- App repository -->
    <string name="person_repository_name">선수 목록</string>

    <!-- PopUp Title -->
    <string name="date_popup_title">날짜 선택</string>
    <string name="addplayer_popup_title">선수 추가</string>
</resources>