<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInformationInputActivity">

    <EditText
        android:id="@+id/edittextOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:fontFamily="@font/bccardlight"
        android:hint="@string/hint_opponent"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textviewOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/input_opponent"
        android:textSize="20sp"
        android:fontFamily="@font/bccardlight"
        app:layout_constraintBottom_toBottomOf="@+id/edittextOpponent"
        app:layout_constraintEnd_toStartOf="@+id/edittextOpponent"
        app:layout_constraintTop_toTopOf="@+id/edittextOpponent" />

    <TextView
        android:id="@+id/textviewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bccardlight"
        android:text="@string/input_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textviewOpponent"
        app:layout_constraintTop_toBottomOf="@+id/textviewOpponent" />

    <Button
        android:id="@+id/buttonGameStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bccardbold"
        android:onClick="GameStartClicked"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/start_game"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkboxIsHometeam" />

    <CheckBox
        android:id="@+id/checkboxIsHometeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bccardlight"
        android:text="@string/is_hometeam"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectData" />

    <Button
        android:id="@+id/buttonSelectData"
        android:onClick="SelectDateClicked"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:fontFamily="@font/bccardlight"
        android:text="@string/select_date"
        android:textSize="15sp"
        app:backgroundTint="@color/second_color"
        app:layout_constraintBottom_toBottomOf="@+id/textviewDate"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/edittextOpponent"
        app:layout_constraintTop_toTopOf="@+id/textviewDate" />

</androidx.constraintlayout.widget.ConstraintLayout>