<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".PlayGameActivity">

    <LinearLayout
        android:id="@+id/layoutField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textviewVS"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="@font/bccardbold"
                android:paddingTop="10dp"
                android:text=""
                android:textColor="@color/teal_700"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textviewBatPitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/bccardbold"
                android:gravity="center"
                android:text="@string/batter"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/switchBatPitch"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchBatPitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/bccardlight"
                android:onClick="batPitchSwitchClicked"
                android:paddingBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutBatter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
            <!-- Person info layout -->
                <TableLayout
                    android:id="@+id/tablelayoutBatter"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:background="@color/table_color">

                </TableLayout>

                <Button
                    android:id="@+id/buttonAddBatter"
                    android:onClick="addPlayerClicked"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:paddingRight="10sp"
                    android:paddingLeft="10sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/bccardbold"
                    android:text="+"/>

                <!-- Batter Button layout -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                    <!-- Set Layout Width -->
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonHit1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="hit1Clicked"
                            android:text="@string/hit_1" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonHit2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="hit2Clicked"
                            android:text="@string/hit_2" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonHit3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="hit3Clicked"
                            android:text="@string/hit_3" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonHomerun"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="homerunClicked"
                            android:text="@string/homerun" />

                    </TableRow>
                    <!-- Set Layout Width -->
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonBall4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="ball4Clicked"
                            android:text="@string/ball_4" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonStrikeout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="strikeoutClicked"
                            android:text="@string/strikeout" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonRBI"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="RBIClicked"
                            android:text="@string/rbi" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonOut"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="outClicked"
                            android:text="@string/out" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">
                <!-- Person info layout -->
                <TableLayout
                    android:id="@+id/tablelayoutPitcher"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@color/background_color">

                </TableLayout>

                <Button
                    android:id="@+id/buttonAddPitcher"
                    android:onClick="addPlayerClicked"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:paddingRight="10sp"
                    android:paddingLeft="10sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/bccardbold"
                    android:text="+"/>

                <!-- Batter Pitcher layout -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                    <!-- Set Layout Width -->
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonStrikeoutPitcher"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="strikeoutPitcherClicked"
                            android:text="@string/strikeout" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonBall4Pitcher"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="ball4PitcherClicked"
                            android:text="@string/ball_4" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonHitted"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="hittedClicked"
                            android:text="@string/hitted" />

                        <Button
                            android:id="@+id/buttonDefError"
                            style="?android:attr/button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="defErrorClicked"
                            android:paddingLeft="5sp"
                            android:paddingRight="5sp"
                            android:text="@string/error"
                            android:textSize="14sp" />

                    </TableRow>
                    <!-- Set Layout Width -->
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonOutPitcher"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="outPitcherClicked"
                            android:text="@string/out" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonLosePoint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="losePointClicked"
                            android:text="@string/lose_point" />

                        <Button
                            style="?android:attr/button"
                            android:id="@+id/buttonNumPitches"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="4"
                            android:fontFamily="@font/bccardbold"
                            android:onClick="numPitchesClicked"
                            android:text="@string/num_pitches" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/imageviewOuts"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/out_0"
            android:contentDescription="@string/out" />

        <TableLayout
            android:id="@+id/tablelayoutScoreboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:stretchColumns="0">

            <TableRow
                android:id="@+id/tablerowInning"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:id="@+id/tablerowAwayTeam"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TableRow
                android:id="@+id/tablerowHomeTeam"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>